Add final project and other tweaks

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -81,7 +81,7 @@
         Resume:
         </td>
         <td>
-        <a target="_blank" href="resume_JSpetz.pdf">Resume as PDF</a><br>
+        <a target="_blank" href="JSpetz_resume.pdf">Resume as PDF</a><br>
         </td>
       </tr>
 
